--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.10.5",
     "core-js": "^3.8.3",
     "jquery": "^3.7.0",
+    "swiper": "^8.0.6",
     "vue": "^2.6.14",
     "vue-horizontal": "^0.8.12",
     "vue-router": "^3.5.1",
