--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "apexcharts": "^3.29.0",
     "bootstrap-icons": "^1.10.5",
+    "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
     "jquery": "^3.7.0",
     "swiper": "^8.0.6",
     "vue": "^2.6.14",
+    "vue-chartjs": "^3.5.1",
     "vue-horizontal": "^0.8.12",
-    "vue-router": "^3.5.1",
+    "vue-router": "^3.6.5",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
